--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -168,11 +168,11 @@ jobs:
             # If the env variable does not equal 'all', we know that there is a list of
             # tests that can be run
 
-            - name: 'Check-only deploy delta changes - run specified tests'
-              if: ${{ env.APEX_TESTS != 'all' }}
-              run: |
-                  echo ${{env.APEX_TESTS}}
-                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
+            # - name: 'Check-only deploy delta changes - run specified tests'
+            #   if: ${{ env.APEX_TESTS != 'all' }}
+            #   run: |
+            #       echo ${{env.APEX_TESTS}}
+            #       sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
 
             # If the env variable equals all, we run all tests
             - name: 'Check-only deploy delta changes - run all tests'
