--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # Unique name for this workflow
-name: Validate PR on master branch
+name: Validate PR on develop branch
 
 # Definition when the workflow should run
 on:
@@ -67,11 +67,11 @@ jobs:
             # Once a developer has specified a list of classes to run, we need to be able
             # to extract this information from the PR, and pass it on the the VM.
 
-            # - name: 'Read PR Body'
-            #   env:
+            - name: 'Read PR Body'
+              env:
                 # The pull request body is available through the github context object
                 # we put the body of the pull request in an env variable (only available to this step)
-                # PR_BODY: ${{github.event.pull_request.body}}
+                PR_BODY: ${{github.event.pull_request.body}}
 
               # Here we print the content of the environment variable and
               # pipe to a a text file.
@@ -83,11 +83,11 @@ jobs:
               # Finally, we add the list of tests to the $GITHUB_ENV variable
               # as this allows us to reference the list in a subsequent step.  If you
               # were using a normal env variable, its value would not be available outside this step.
-              # run: |
-              #     echo $PR_BODY > ./pr_body.txt
-              #     node ./parsePR.js              
-              #     TESTS=$(cat testsToRun.txt)       
-              #     echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
+              run: |
+                  echo $PR_BODY > ./pr_body.txt
+                  node ./parsePR.js              
+                  TESTS=$(cat testsToRun.txt)       
+                  echo "APEX_TESTS=$TESTS" >> $GITHUB_ENV
                   
             # Now Install Salesforce CLI
             - name: 'Install Salesforce CLI'
@@ -127,7 +127,7 @@ jobs:
             # was generated from. This works just like that, there's no need to create
             # connected apps or any else. 
 
-            # The URL is stored in the Github Secret named SFDX_INTEGRATION_URL
+            # The URL is stored in the Github Secret named SFDX_PROD_URL
             # so here we store the URL into a text file
             - name: 'Populate auth file with SFDX_URL secret of integration org'
               shell: bash
@@ -168,11 +168,11 @@ jobs:
             # If the env variable does not equal 'all', we know that there is a list of
             # tests that can be run
 
-            # - name: 'Check-only deploy delta changes - run specified tests'
-            #   if: ${{ env.APEX_TESTS != 'all' }}
-            #   run: |
-            #       echo ${{env.APEX_TESTS}}
-            #       sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
+            - name: 'Check-only deploy delta changes - run specified tests'
+              if: ${{ env.APEX_TESTS != 'all' }}
+              run: |
+                  echo ${{env.APEX_TESTS}}
+                  sfdx force:source:deploy -p "changed-sources/force-app" --checkonly --testlevel RunSpecifiedTests --runtests ${{env.APEX_TESTS}} --json
 
             # If the env variable equals all, we run all tests
             - name: 'Check-only deploy delta changes - run all tests'
