--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
       "default": true
     }
   ],
-  "name": "CI CD Sample",
+  "name": "Salesforce-Org-Development",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "54.0"
+  "sourceApiVersion": "52.0"
 }
